--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <EditTextPreference
+        android:key="divider_setting"
+        android:title="@string/divider_setting"
+        android:summary="@string/divider_setting_summary"
+        android:defaultValue=","/>
     <Preference
         android:key="manage_products"
         android:title="@string/manage_autocomplete"
