--- a/app/src/main/res/layout/body.xml
+++ b/app/src/main/res/layout/body.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@android:color/background_dark">
+        android:background="@android:color/background_dark"
+        android:alpha="0.95">
 
         <LinearLayout
             android:orientation="horizontal"
