--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -3,11 +3,22 @@
 
     <PreferenceCategory
         android:title="@string/main">
+        <CheckBoxPreference
+            android:key="sms_parser"
+            android:title="@string/sms_parser_settings_title"
+            android:summary="@string/sms_parser_settings_summary"
+            android:defaultValue="true">
+        </CheckBoxPreference>
         <EditTextPreference
             android:key="divider_setting"
             android:title="@string/divider_setting"
             android:summary="@string/divider_setting_summary"
             android:defaultValue=","/>
+        <CheckBoxPreference
+            android:key="acra.enable"
+            android:title="@string/pref_enable_acra"
+            android:summary="@string/pref_enable_acra_summary"
+            android:defaultValue="true"/>
     </PreferenceCategory>
 
     <PreferenceCategory
