--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/item"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textSize="20sp" />
 
     <CheckBox
         android:layout_width="wrap_content"
