--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,7 +9,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/item"
         android:layout_weight="1"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
