--- a/app/src/main/res/layout/body.xml
+++ b/app/src/main/res/layout/body.xml
@@ -9,8 +9,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@android:color/background_dark"
-        android:alpha="0.9"
-        android:gravity="top|start">
+        android:gravity="top|start"
+        android:alpha="0.9">
 
         <LinearLayout
             android:orientation="horizontal"
