--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,11 +10,13 @@
         android:id="@+id/item"
         android:layout_weight="1"
         android:textSize="18sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="10dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBoxItem" />
+        android:id="@+id/checkBoxItem"
+        android:layout_marginRight="10dp" />
 </LinearLayout>
