--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/selectAll"
-        android:icon="@android:drawable/checkbox_on_background"
+        android:icon="@drawable/ic_action_action_done_all"
         android:showAsAction="ifRoom|withText"
         android:title="@string/select_all"
         android:titleCondensed="@string/select_all">
