--- a/standOut/src/main/res/layout/system_window_decorators.xml
+++ b/standOut/src/main/res/layout/system_window_decorators.xml
@@ -37,7 +37,7 @@
             android:id="@+id/hide"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:background="@android:drawable/ic_menu_upload"
+            android:background="@drawable/ic_action_navigation_expand_less"
             android:contentDescription="@string/hide" />
 
         <ImageView
