--- a/app/src/main/res/layout/body.xml
+++ b/app/src/main/res/layout/body.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:dslv="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:id="@+id/background"
@@ -32,10 +33,11 @@
                 android:contentDescription="@string/add" />
         </LinearLayout>
 
-        <ru.zzsdeo.smsshoppinglist.DynamicListView
+        <com.mobeta.android.dslv.DragSortListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/shoppingList" />
+            android:id="@+id/shoppingList"
+            dslv:drag_start_mode="onLongPress"/>
     </LinearLayout>
 
 </merge>
